<resources>
    <string name="app_name">CardShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_lane">Address Lane</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="add_address">Add Address</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="add_address_btn">Add Address</string>
    <string name="continue_to_payment_btn">Continue to payment</string>
    <string name="total_0">Total: $0</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="buy_now_btn">Buy Now</string>
    <string name="pay_btn">Pay</string>
    <string name="your_order_has_been_successful">Your order has been successful!</string>
    <string name="continue_shopping_btn">Continue Shopping</string>
    <string name="email">Email</string>
    <string name="info_cardshop_gmail_com">info.uth.cardshop@gmail.com</string>
    <string name="telephone">Telephone</string>
    <string name="_2410123456">+2410123456</string>
    <string name="address">Address</string>
    <string name="papavasiliou_34_larissa_41673">Papavasileiou 366, Larissa, 41334</string>
    <string name="sample_card">sample_card</string>
    <string name="sample_price">sample_price</string>
    <string name="quantity">Quantity:</string>
    <string name="rarity_btn">Rarity</string>
    <string name="rarity">Rarity:</string>
    <string name="qnt_btn">QNT</string>
    <string name="rules_text">Rules Text</string>
    <string name="sometest_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s">SomeTest:Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="add_to_cart_btn">+ Add to Cart</string>
    <string name="add_to_wishlist_btn">+ Add To Wishlist</string>
    <string name="code">Code:</string>
    <string name="_0">0</string>
    <string name="your_fullname">Your FullName</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="save_btn">Save</string>
    <string name="search_your_product">Search Your Product</string>
    <string name="login">Login</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_cardshop">Welcome to CardShop</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_welcome">Sign Up</string>
    <string name="empty_orders">Empty Orders</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="subtotal_price">$ 0</string>
    <string name="payment_discount">$ 0</string>
    <string name="free">FREE</string>
    <string name="total">Total</string>
    <string name="total_amount">$ 0</string>
    <string name="pay_with_stripe">Pay With Stripe</string>
    <string name="fullname">FullName</string>
    <string name="email_register">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="phone_register">Phone</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address_profile">Your Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="empty_wishlist">Empty Wishlist</string>
    <string name="categories">Categories</string>
    <string name="see_all_categories">See All</string>
    <string name="see_all_featured">See All</string>
    <string name="best_sell">Best Sell</string>
    <string name="see_all_bestsell">See All</string>
    <string name="featured">Featured</string>
    <string name="us_california">US California</string>
    <string name="bestsell_card">BestSell Card</string>
    <string name="common">Common</string>
    <string name="bestsell_price">BestSell Price</string>
    <string name="item_name">Item Name</string>
    <string name="item_rarity">Item Rarity</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="featured_card">Featured Card</string>
    <string name="super_rare">Super Rare</string>
    <string name="featured_price">Featured Price</string>
    <string name="single_card">Single Card</string>
    <string name="rare">Rare</string>
    <string name="single_price">Single Price</string>
    <string name="order_name">Order Name</string>
    <string name="order_address">Order address</string>
    <string name="order_email">Order Email</string>
    <string name="order_address_single">Order address</string>
    <string name="order_quantity">Order quantity</string>
    <string name="order_price">Order Price</string>
    <string name="item_name_payment">Item Name</string>
    <string name="item_rarity_payment">Item rarity</string>
    <string name="item_quantity_payment">Item quantity</string>
    <string name="item_name_wishlist">Item Name</string>
    <string name="item_rarity_wishlist">Item Rarity</string>
    <string name="item_price_wishlist">Item Price</string>
    <string name="cart_menu">Cart</string>
    <string name="my_orders_menu">My Orders</string>
    <string name="profile_menu">Profile</string>
    <string name="wishlist_menu">Wishlist</string>
    <string name="contact_menu">Contact</string>
    <string name="log_out_menu">Log out</string>
    <string name="search_menu">Search</string>
    <string name="loading">Loading...</string>
</resources>