<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="2dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_margin="5dp"
        android:id="@+id/f_img"
        android:src="@drawable/cardbackground"/>
    <TextView
        android:id="@+id/f_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured_card"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/f_rarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_rare"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/f_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured_price"
        android:textSize="14sp"/>
</LinearLayout>